--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
     rev: v2.4.1
     hooks:
       - id: codespell
+        args: ["--skip=pyproject.toml"]
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v4.3.0
     hooks:
